--- a/app/src/main/res/layout/fragment_meals.xml
+++ b/app/src/main/res/layout/fragment_meals.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#d1d1d1"
     tools:context=".MealsFragment">
 
     <android.support.v7.widget.Toolbar
@@ -25,7 +26,8 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
-        android:dividerHeight="10dp" />
+        android:dividerHeight="10dp"
+        android:divider="#d1d1d1"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/btnAdd"
