--- a/app/src/main/res/layout/meals_list.xml
+++ b/app/src/main/res/layout/meals_list.xml
@@ -6,18 +6,18 @@
     android:layout_height="match_parent"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
-    android:paddingBottom="10dp"
+    android:paddingBottom="5dp"
     android:paddingTop="5dp"
     android:background="@color/colorWhite"
     android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/meal_picture"
-        android:layout_width="100dp"
-        android:layout_height="85dp"
-        app:srcCompat="@drawable/food"
+        android:layout_width="125dp"
+        android:layout_height="70dp"
         android:layout_alignParentStart="true"
-        android:contentDescription="Food Picture"/>
+        android:contentDescription="Food Picture"
+        app:srcCompat="@drawable/food" />
 
     <TextView
         android:id="@+id/meal_name"
@@ -25,8 +25,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignTop="@+id/meal_picture"
-        android:layout_marginStart="105dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginStart="130dp"
+        android:layout_marginTop="20dp"
         android:text="Food Name"
         android:textSize="20sp" />
 
