--- a/app/src/main/res/layout/fragment_add_a_meal.xml
+++ b/app/src/main/res/layout/fragment_add_a_meal.xml
@@ -14,12 +14,23 @@
             android:layout_height="516dp">
 
             <ImageView
-                android:id="@+id/fragment_food_image"
-                android:layout_width="125dp"
-                android:layout_height="125dp"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/ic_baseline_arrow_back_24px"/>
+
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_alignParentEnd="true"
                 android:layout_alignParentTop="true"
+                android:src="@drawable/ic_baseline_delete_24px" />
+
+            <ImageView
+                android:id="@+id/fragment_food_image"
+                android:layout_width="match_parent"
+                android:layout_height="125dp"
+                android:layout_below="@+id/fragment_food_name"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="58dp"
                 android:contentDescription="Food image goes here."
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.501"
@@ -30,9 +41,9 @@
                 android:id="@+id/fragment_food_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="36dp"
                 android:contentDescription="Food name goes here."
                 android:gravity="center"
                 android:text="Food name goes here: "
