--- a/app/src/main/res/layout/fragment_add_a_meal.xml
+++ b/app/src/main/res/layout/fragment_add_a_meal.xml
@@ -29,8 +29,9 @@
                 android:id="@+id/fragment_food_image"
                 android:layout_width="match_parent"
                 android:layout_height="125dp"
-                android:layout_below="@+id/fragment_food_name"
-                android:layout_centerHorizontal="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="56dp"
                 android:contentDescription="Food image goes here."
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.501"
@@ -43,7 +44,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginTop="36dp"
+                android:layout_marginTop="13dp"
                 android:contentDescription="Food name goes here."
                 android:gravity="center"
                 android:text="Food name goes here: "
