--- a/app/src/main/res/layout/shopping_list.xml
+++ b/app/src/main/res/layout/shopping_list.xml
@@ -4,15 +4,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#d1d1d1"
+    android:background="@color/colorWhite"
     tools:context=".ShoppingListFragment">
 
     <CheckBox
         android:id="@+id/ingredient_chk_box"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:checked="false"
-        android:text="Ingredient Name" />
+        android:text="Ingredient Name"
+        android:textSize="15sp"/>
 
     <TextView
         android:id="@+id/ingredient_amount"
