--- a/app/src/main/res/layout/meals_list.xml
+++ b/app/src/main/res/layout/meals_list.xml
@@ -16,7 +16,7 @@
         android:layout_width="125dp"
         android:layout_height="70dp"
         android:layout_alignParentStart="true"
-        android:contentDescription="Food Picture"
+        android:contentDescription="@string/meals"
         app:srcCompat="@drawable/food" />
 
     <TextView
@@ -27,7 +27,6 @@
         android:layout_alignTop="@+id/meal_picture"
         android:layout_marginStart="130dp"
         android:layout_marginTop="20dp"
-        android:text="Food Name"
         android:textSize="20sp" />
 
     <TextView
@@ -35,7 +34,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:text="x1"
         android:textSize="20sp"
 
         android:textColor="@color/colorPrimaryDark"/>
