Found big bug with selected items changing on scroll, added strikethrough

--- a/app/src/main/res/layout/shopping_list.xml
+++ b/app/src/main/res/layout/shopping_list.xml
@@ -12,7 +12,8 @@
         android:layout_height="wrap_content"
         android:textSize="17sp"
         android:paddingTop="13dp"
-        android:paddingBottom="13dp" />
+        android:paddingBottom="13dp"
+        android:checked="false"/>
 
     <TextView
         android:id="@+id/ingredient_name"
