--- a/app/src/main/res/layout/shopping_list.xml
+++ b/app/src/main/res/layout/shopping_list.xml
@@ -13,9 +13,7 @@
         android:textSize="17sp"
         android:paddingTop="13dp"
         android:paddingBottom="13dp"
-        android:checked="false"
-        android:focusable="false"
-        android:focusableInTouchMode="false"/>
+        android:checked="false" />
 
     <TextView
         android:id="@+id/ingredient_name"
