--- a/app/src/main/res/layout/fragment_add_a_meal.xml
+++ b/app/src/main/res/layout/fragment_add_a_meal.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
-    tools:context=".AddMeal">
+    tools:context=".AddMealFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
