--- a/app/src/main/res/layout/fragment_meals.xml
+++ b/app/src/main/res/layout/fragment_meals.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#d1d1d1"
-    tools:context=".MealsFragment">
+    tools:context=".MealListFragment">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/mealsTopBar"
