Fixed some comments, added text views when lists are empty

--- a/app/src/main/res/layout/fragment_meals.xml
+++ b/app/src/main/res/layout/fragment_meals.xml
@@ -17,6 +17,14 @@
         app:titleTextColor="@color/colorWhite"
         />
 
+    <TextView
+        android:id="@+id/emptyMealsList"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:gravity="center"
+        android:text="@string/emptyMealsList" />
+
     <ListView
         android:id="@+id/mealsListView"
         android:layout_width="match_parent"
