--- a/app/src/main/res/layout/fragment_meals.xml
+++ b/app/src/main/res/layout/fragment_meals.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/meals_layout"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,8 +15,7 @@
         android:background="@color/colorPrimary"
         app:popupTheme="@style/AppTheme.PopupOverlay"
         app:title="@string/meals"
-        app:titleTextColor="@color/colorWhite"
-        />
+        app:titleTextColor="@color/colorWhite" />
 
     <TextView
         android:id="@+id/emptyMealsList"
@@ -25,7 +25,7 @@
         android:gravity="center"
         android:text="@string/emptyMealsList" />
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/mealsListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -48,7 +48,6 @@
         android:layout_marginEnd="25dp"
         android:src="@drawable/ic_add_white_24dp"
         app:backgroundTint="@color/colorPrimary"
-        android:scaleType="center"
-        />
+        android:scaleType="center" />
 
 </RelativeLayout>
