--- a/app/src/main/res/layout/meals_list.xml
+++ b/app/src/main/res/layout/meals_list.xml
@@ -1,41 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="5dp"
-    android:paddingRight="5dp"
-    android:paddingBottom="5dp"
-    android:paddingTop="5dp"
-    android:background="@color/colorWhite"
-    android:orientation="horizontal">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:paddingLeft="3dp"
+    android:paddingRight="3dp"
+    android:paddingBottom="3dp"
+    android:paddingTop="3dp"
+    android:background="#d1d1d1">
 
-    <ImageView
-        android:id="@+id/meal_picture"
-        android:layout_width="125dp"
-        android:layout_height="70dp"
-        android:layout_alignParentStart="true"
-        android:contentDescription="@string/meals"
-        app:srcCompat="@drawable/food" />
+    <RelativeLayout
+        android:id="@+id/view_background"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingLeft="7dp"
+        android:paddingRight="7dp"
+        android:paddingBottom="7dp"
+        android:paddingTop="7dp"
+        android:background="@color/bg_row_background"
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/meal_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignTop="@+id/meal_picture"
-        android:layout_marginStart="130dp"
-        android:layout_marginTop="20dp"
-        android:textSize="20sp" />
+        <ImageView
+            android:id="@+id/delete_icon"
+            android:layout_width="@dimen/ic_delete"
+            android:layout_height="@dimen/ic_delete"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="@dimen/padd_10"
+            android:src="@drawable/ic_baseline_delete_white_24dp" />
 
-    <TextView
-        android:id="@+id/meal_amount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:textSize="20sp"
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="@dimen/padd_10"
+            android:layout_toStartOf="@id/delete_icon"
+            android:text="@string/delete"
+            android:textColor="#fff"
+            android:textSize="13sp" />
 
-        android:textColor="@color/colorPrimaryDark"/>
+    </RelativeLayout>
 
-</RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingLeft="7dp"
+        android:paddingRight="7dp"
+        android:paddingBottom="7dp"
+        android:paddingTop="7dp"
+        android:background="@color/colorWhite"
+        android:orientation="horizontal"
+        android:id="@+id/view_foreground">
+
+        <ImageView
+            android:id="@+id/meal_picture"
+            android:layout_width="125dp"
+            android:layout_height="70dp"
+            android:layout_alignParentStart="true"
+            android:contentDescription="@string/meals"
+            app:srcCompat="@drawable/food" />
+
+        <TextView
+            android:id="@+id/meal_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignTop="@+id/meal_picture"
+            android:layout_marginStart="130dp"
+            android:layout_marginTop="20dp"
+            android:textSize="20sp"
+            android:text="@string/app_name"/>
+
+        <TextView
+            android:id="@+id/meal_amount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:textSize="20sp"
+            android:textColor="@color/colorPrimaryDark"
+            android:text="@string/app_name"/>
+
+    </RelativeLayout>
+
+</FrameLayout>
