--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -9,6 +9,7 @@
     android:background="#d1d1d1"
     tools:context=".SearchActivity">
 
+
     <android.support.v7.widget.Toolbar
         android:id="@+id/searchTopBar"
         android:layout_width="match_parent"
@@ -19,23 +20,23 @@
         app:titleTextColor="@color/colorWhite"
         />
 
-    <SearchView
-        android:id="@+id/search_badge"
-        android:layout_width="match_parent"
+    <EditText
+        android:id="@+id/searchInput"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/searchTopBar"
-        android:background="@color/colorWhite"/>
-
+        android:drawableStart="@drawable/ic_search_black_24dp"
+        android:hint="@string/search_hint"
+        android:singleLine="true">
+    </EditText>
 
     <ListView
         android:id="@+id/searchListView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/search_badge"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="10dp"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/searchInput"
+        android:layout_marginTop="5dp"
         android:dividerHeight="10dp"
         android:divider="#d1d1d1"/>
 
