--- a/app/src/main/res/layout/fragment_meals.xml
+++ b/app/src/main/res/layout/fragment_meals.xml
@@ -33,9 +33,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginBottom="10dp"
-        android:dividerHeight="10dp"
-        android:divider="#d1d1d1"/>
+        android:layout_marginBottom="10dp" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/btnAdd"
