--- a/app/src/main/res/layout/fragment_shopping_list.xml
+++ b/app/src/main/res/layout/fragment_shopping_list.xml
@@ -25,7 +25,7 @@
         android:gravity="center"
         android:text="@string/emptyShoppingList" />
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/shoppingListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
