--- a/app/src/main/res/layout/shopping_list_section_headers.xml
+++ b/app/src/main/res/layout/shopping_list_section_headers.xml
@@ -1,20 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<FrameLayout
     android:layout_height="wrap_content"
-    android:padding="10dp"
-    android:background="@color/colorPrimary">
+    android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:paddingLeft="3dp"
+    android:paddingRight="3dp"
+    android:paddingBottom="3dp"
+    android:paddingTop="3dp"
+    android:background="#d1d1d1">
 
-
-    <TextView
-        android:id="@+id/ingredient_type_header"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="Ingredient Type"
-        android:textColor="@color/colorWhite"
-        android:textSize="20dp"
-        android:textStyle="bold"/>
+        android:padding="10dp"
+        android:background="@color/colorPrimary">
 
-</RelativeLayout>
+
+        <TextView
+            android:id="@+id/ingredient_type_header"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="Ingredient Type"
+            android:textColor="@color/colorWhite"
+            android:textSize="20sp"
+            android:textStyle="bold"/>
+
+    </RelativeLayout>
+
+</FrameLayout>
