--- a/app/src/main/res/layout/meal_list.xml
+++ b/app/src/main/res/layout/meal_list.xml
@@ -62,6 +62,7 @@
             android:layout_height="70dp"
             android:layout_alignParentStart="true"
             android:contentDescription="@string/meals"
+            android:background="@drawable/recipe_image_border"
             app:srcCompat="@drawable/food" />
 
         <TextView
