--- a/app/src/main/res/layout/recipe_list.xml
+++ b/app/src/main/res/layout/recipe_list.xml
@@ -2,10 +2,10 @@
 
 <!--
 
-    Here, using a recipe_list file instead of meals_list (TODO rename meals_list to meal_list)
+    Here, using a recipe_list file instead of meal_list (TODO rename meal_list to meal_list)
     Reasoning - separation of concern
     In this scenario, there is no need for "amount" for recipe
-    Rather than using meals_list to hide "amount" TextView, recipe_list is created instead
+    Rather than using meal_list to hide "amount" TextView, recipe_list is created instead
     Allowing for additional information to be added/removed if needed
 
 -->
@@ -72,6 +72,7 @@
             android:layout_height="70dp"
             android:layout_alignParentStart="true"
             android:contentDescription="@string/meals"
+            android:background="@drawable/recipe_image_border"
             app:srcCompat="@drawable/food" />
 
         <TextView
