--- a/app/src/main/res/layout/meal_list.xml
+++ b/app/src/main/res/layout/meal_list.xml
@@ -69,19 +69,21 @@
             android:id="@+id/meal_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:text="@string/app_name"
+            android:layout_centerVertical="true"
+            android:paddingStart="135dp"
             android:layout_alignParentStart="true"
-            android:layout_alignTop="@+id/meal_picture"
-            android:layout_marginStart="130dp"
-            android:layout_marginTop="20dp"
-            android:textSize="20sp"
-            android:text="@string/app_name"/>
+            android:layout_toStartOf="@id/meal_amount"
+            />
 
         <TextView
             android:id="@+id/meal_amount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:textSize="20sp"
+            android:layout_alignParentTop="true"
+            android:textSize="16sp"
             android:textColor="@color/colorPrimaryDark"
             android:text="@string/app_name"/>
 
