--- a/app/src/main/res/layout/meal_list.xml
+++ b/app/src/main/res/layout/meal_list.xml
@@ -48,33 +48,34 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingLeft="7dp"
-        android:paddingRight="7dp"
-        android:paddingBottom="7dp"
-        android:paddingTop="7dp"
+        android:paddingLeft="3dp"
+        android:paddingRight="3dp"
+        android:paddingBottom="3dp"
+        android:paddingTop="3dp"
         android:background="@color/colorWhite"
         android:orientation="horizontal"
         android:id="@+id/view_foreground">
 
         <ImageView
             android:id="@+id/meal_picture"
-            android:layout_width="125dp"
-            android:layout_height="70dp"
+            android:layout_width="135dp"
+            android:layout_height="90dp"
             android:layout_alignParentStart="true"
             android:contentDescription="@string/meals"
             android:background="@drawable/recipe_image_border"
-            app:srcCompat="@drawable/food" />
+            app:srcCompat="@drawable/food"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginStart="5dp"/>
 
         <TextView
             android:id="@+id/meal_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="18sp"
+            android:textSize="20sp"
             android:text="@string/app_name"
             android:layout_centerVertical="true"
-            android:paddingStart="135dp"
-            android:layout_alignParentStart="true"
-            android:layout_toStartOf="@id/meal_amount"
+            android:paddingStart="145dp"
             />
 
         <TextView
@@ -83,7 +84,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentTop="true"
-            android:textSize="16sp"
+            android:textSize="18sp"
             android:textColor="@color/colorPrimaryDark"
             android:text="@string/app_name"/>
 
