--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -27,8 +27,13 @@
         android:layout_below="@+id/searchTopBar"
         android:drawableStart="@drawable/ic_search_black_24dp"
         android:hint="@string/search_hint"
-        android:textSize="10pt"
+        android:textSize="20sp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:layout_marginStart="3dp"
+        android:layout_marginEnd="3dp"
         android:singleLine="true"
+        android:background="@color/colorWhite"
         android:inputType="textVisiblePassword"/>
 
     <android.support.v7.widget.RecyclerView
