beginning of meal-info

--- a/app/src/main/res/layout/fragment_meal_info.xml
+++ b/app/src/main/res/layout/fragment_meal_info.xml
@@ -13,7 +13,7 @@
         android:orientation="horizontal">
 
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/add_meal_change_serving" />
 
