--- a/app/src/main/res/layout/fragment_meal_info.xml
+++ b/app/src/main/res/layout/fragment_meal_info.xml
@@ -64,7 +64,9 @@
                 android:layout_gravity="center_vertical|center_horizontal"
                 android:lineSpacingExtra="10dp"
                 android:text="@string/recipe_goes_here"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"/>
 
         </LinearLayout>
     </ScrollView>
