--- a/app/src/main/res/layout/fragment_meal_info.xml
+++ b/app/src/main/res/layout/fragment_meal_info.xml
@@ -31,7 +31,7 @@
             android:layout_marginEnd="6dp"
             android:layout_marginStart="6dp"
             android:background="@color/colorPrimary"
-            android:paddingTop="10dp"
+            android:layout_marginTop="2dp"
             android:text="@string/add_meal_change_serving"
             android:textColor="@color/colorWhite"
             android:textSize="20sp" />
